--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,10 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 install:
-  - npm install coveralls
+  - npm install -g codecov
   - npm install
 script:
   - npm run ci
 after_script:
-  -cat ./coverage/coverage.lcov | ./node_modules/coveralls/bin/coveralls.js  
+  - cat ./coverage/coverage.lcov | ./node_modules/coveralls/bin/coveralls.js  
+  - codecov
