--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,12 @@ before_script:
   - sh -e /etc/init.d/xvfb start
 install:
   - npm install -g codecov
+  - npm install coveralls
   - npm install
 script:
   - npm run ci
 after_script:  
   - codecov
+  - cat ./coverage/coverage.lcov | ./node_modules/coveralls/bin/coveralls.js
 
   
